update absolute path with relative path

--- a/example/math/utm-to-latlng/index.html
+++ b/example/math/utm-to-latlng/index.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0"
-        />
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
         <meta name="author" content="CesiumGIS CoolGIS https://coolgis.org/" />
         <meta name="apple-touch-fullscreen" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -20,7 +17,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
         <title></title>
 
-        <script type="text/javascript" src="/lib/include-lib.js" libpath="./lib/" include="cesiumjs,proj4"></script>
+        <script type="text/javascript" src="./lib/include-lib.js" libpath="./lib/" include="cesiumjs,proj4"></script>
         <style>
             html,
             body,
