--- a/example/terrain/elevation-shading/index.html
+++ b/example/terrain/elevation-shading/index.html
@@ -18,7 +18,7 @@
         <title></title>
         <script src="https://cesium.com/downloads/cesiumjs/releases/1.83/Build/CesiumUnminified/Cesium.js"></script>
         <link href="https://cesium.com/downloads/cesiumjs/releases/1.83/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
-        <script type="text/javascript" src="/lib/include-lib.js" libpath="./lib/" include=""></script>
+        <script type="text/javascript" src="./lib/include-lib.js" libpath="./lib/" include=""></script>
         <style>
             html,
             body,
