--- a/editor.html
+++ b/editor.html
@@ -4,10 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <!-- mobile device viewport -->
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"
-        />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui" />
         <meta name="author" content="ZhefengJin 3DGISKing https://coolgis.org/ " />
 
         <meta name="renderer" content="webkit" />
@@ -46,10 +43,10 @@
                         baseUrl: "/",
                         code: getQueryString("code"),
                         configLibs: window.configLibs,
-                        resourcePublicPath: "/example",
-                        libPublicPath: "/lib/",
+                        resourcePublicPath: "./example",
+                        libPublicPath: "./lib/",
                         framework: "es5",
-                        configSourceUrl: `/config/example.json`
+                        configSourceUrl: `./config/example.json`
                     });
 
                     jsEditor.renderHTML({
@@ -72,11 +69,7 @@
             function getExampleId() {
                 let exampleId = getQueryString("id");
                 if (exampleId) {
-                    return exampleId
-                        .replace(/\\/gm, "/")
-                        .replace("example/", "")
-                        .replace("/code.js", "")
-                        .replace("/index.html", "");
+                    return exampleId.replace(/\\/gm, "/").replace("example/", "").replace("/code.js", "").replace("/index.html", "");
                 }
             }
         </script>
