--- a/example/advanced/satellite/index.html
+++ b/example/advanced/satellite/index.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0"
-        />
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
         <meta name="author" content="CesiumGIS CoolGIS https://coolgis.org/" />
         <meta name="apple-touch-fullscreen" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -21,7 +18,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/satellite.js/4.1.4/satellite.min.js"></script>
         <title></title>
 
-        <script type="text/javascript" src="/lib/include-lib.js" libpath="./lib/" include="cesiumjs"></script>
+        <script type="text/javascript" src="./lib/include-lib.js" libpath="./lib/" include="cesiumjs"></script>
         <style>
             html,
             body,
