--- a/example/camera/simple-tour/index.html
+++ b/example/camera/simple-tour/index.html
@@ -17,7 +17,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
         <title></title>
 
-        <script type="text/javascript" src="/lib/include-lib.js" libpath="./lib/" include="cesiumjs,sandcastle"></script>
+        <script type="text/javascript" src="./lib/include-lib.js" libpath="./lib/" include="cesiumjs,sandcastle"></script>
         <style>
             html,
             body,
