--- a/example/shader/globe-shader-override/index.html
+++ b/example/shader/globe-shader-override/index.html
@@ -18,7 +18,7 @@
         <title></title>
         <script src="https://cesium.com/downloads/cesiumjs/releases/1.78/Build/CesiumUnminified/Cesium.js"></script>
         <link href="https://cesium.com/downloads/cesiumjs/releases/1.78/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
-        <script type="text/javascript" src="/lib/include-lib.js" libpath="./lib/" include="sandcastle"></script>
+        <script type="text/javascript" src="./lib/include-lib.js" libpath="./lib/" include="sandcastle"></script>
         <style>
             html,
             body,
