--- a/example/terrain/floor/index.html
+++ b/example/terrain/floor/index.html
@@ -19,7 +19,7 @@
 
         <script src="https://cesium.com/downloads/cesiumjs/releases/1.106/Build/CesiumUnminified/Cesium.js"></script>
         <link href="https://cesium.com/downloads/cesiumjs/releases/1.106/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
-        <script type="text/javascript" src="/lib/include-lib.js" libpath="./lib/" include="turf"></script>
+        <script type="text/javascript" src="./lib/include-lib.js" libpath="./lib/" include="turf"></script>
         <style>
             html,
             body,
