--- a/samples.html
+++ b/samples.html
@@ -3,27 +3,19 @@
     <head>
         <meta charset="UTF-8" />
 
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"
-        />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui" />
         <meta name="author" content="CesiumGIS CoolGIS https://coolgis.org/" />
 
         <meta name="keywords" content="CoolGIS|CesiumGIS|3DGISKing|cesium|" />
         <meta name="description" content="ZhefengJin 3DGISKing CesiumJS Samples" />
 
-        <link
-            href="/lib/fonts/font-awesome/css/font-awesome.min.css"
-            rel="stylesheet"
-            type="text/css"
-            crossorigin="anonymous"
-        />
+        <link href="./lib/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" />
         <link rel="icon" href="/favicon.ico" />
         <title>CesiumJS Samples</title>
-        <script type="module" crossorigin src="/assets/js/examples.js"></script>
-        <link rel="stylesheet" crossorigin href="/assets/css/index.css" />
-        <link rel="stylesheet" crossorigin href="/assets/css/examples.css" />
-        <link rel="stylesheet" crossorigin href="/assets/css/app.css" />
+        <script type="module" crossorigin src="./assets/js/examples.js"></script>
+        <link rel="stylesheet" crossorigin href="./assets/css/index.css" />
+        <link rel="stylesheet" crossorigin href="./assets/css/examples.css" />
+        <link rel="stylesheet" crossorigin href="./assets/css/app.css" />
     </head>
     <body>
         <div id="app"></div>
